# filereader

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
src/: Makefile.am  Makefile.in  config.h.in  csvreader.cpp  csvreader.hpp  filereader.cpp  filereader.hpp  filereader_core.cpp  filereader_core.hpp  filereader_gzip.cpp  filereader_gzip.hpp  filereader_mmap.cpp  filereader_mmap.hpp  filereader_stdio.cpp  filereader_stdio.hpp  growbuffer.hpp  tablereader.cpp  tablereader.hpp  test.cpp
test/: .gitignore  LARGECSV-dos.csv  LARGECSV-mac.csv  LARGECSV-unix.csv  LARGECSV.csv  LARGECSV2.csv  LARGECSV3.csv  LARGECSV4.csv  Makefile.am  Makefile.in  TESTCSV-mac.csv  TESTCSV-unix.csv  TESTCSV2-dos.csv  TESTCSV2-mac.csv  TESTCSV2-unix.csv  TESTCSV3.csv  TESTFILE  TESTTABLE.TVS  TESTTABLE2.TVS  test_common.hpp  test_csv.cpp  test_filereader.cpp  test_growbuffer.cpp  test_stdiotest.cpp  test_table.cpp
test/gtest/: Makefile.am
